new change based on Mrs Fensel commands

--- a/MasterThesis/acknowlegements.tex
+++ b/MasterThesis/acknowlegements.tex
@@ -1,5 +1,7 @@
-
- \centerline{This page is intentionally left blank.}
+\begin{acknowledgement}
+    
+\end{acknowledgement}
+ 
 
                   
 
