--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -51,7 +51,7 @@
 @article{Hex,
 	author  = {Lin William Congy, Zhiguo Hex}, 
 	title   = {Blockchain Disruption and Smart Contracts},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"}, 
+	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
 	volume  = 12,
 	month = 2,
 	year = 2018
@@ -60,7 +60,7 @@
 @article{Vitalik,
 	author  = {Vitalik Buterin}, 
 	title   = {A Next generation smart contract & decentrlized application platform},
-	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"}, 
+	url = {"http://ceur-ws.org/Vol-2161/paper6.pdf"} 
 	volume  = 36,
 	url =  {"http://blockchainlab.com/pdf/Ethereum_white_paper-a_next_generation_smart_contract_and_decentralized_application_platform-vitalik-buterin.pdf"}, 
 	month = 2,
@@ -81,7 +81,7 @@
 	author  = {Hector Ugarte }, 
 	title   = {A more pragmatic Web 3.0: Linked Blockchain Data},
 	url = {"https://semanticblocks.files.wordpress.com/2017/03/linked_blockchain_paper_final.pdf"}, 
-	DOI= {10.13140/RG.2.2.10304.12807/1},
+	DOI= {10.13140/RG.2.2.10304.12807/1}
 	volume = 15, 
 	month = 1,
 	year = 2017
@@ -180,7 +180,7 @@
 	url = {http://dx.doi.org/doi:10.1007/978-3-319-70407-441}, 
 	volume = 7,
 	year   = 2017,
-	pages = 332
+	pages = 327–332
 	
 },
 @article{Florian,
@@ -244,7 +244,7 @@ year   = 2018,
 },
 @article{Aithal, 
 author  = {P.K. Paul1, P.S. Aithal, Ricardo Saavedra and Surajit Ghosh},  
-title   = {Blockchain in Electricity: a Critical Review of Progress to Date},
+title   = {Blockchain Technology and its Types},
 url = {https://www.researchgate.net/publication/359051731}, 
 volume = 13,
 year   = 2021,
@@ -255,7 +255,7 @@ author  = {Shashie Dilhara},
 title   = {A Review on Application of Hash Functions and Digital signatures in the
 Blockchain Industry},
 url = {https://www.researchgate.net/publication/354700341}, 
-volume = ,
+volume = 5,
 year   = 2021,
 
 },
@@ -270,19 +270,12 @@ year   = 2020,
 @article{Payrott, 
 author  = {Sebastian Payrott},  
 title   = {introduction to Ethereum and Smart Contracts},
-url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
+url = {https://auth0.com/blog/an-introduction-to-ethereum-and-smart-contracts-part-2/}, 
 volume = 68,
 year   = 2017,
 
 },
-@article{Wood, 
-author  = {Sebastian Payrott},  
-title   = {introduction to Ethereum and Smart Contracts},
-url = {https://ethereum.org/669c9e2e2027310b6b3cdce6e1c52962/Ethereum_Whitepaper_-_Buterin_2014.pdf}, 
-volume = 68,
-year   = 2017,
 
-},
 @article{Tassilo, 
 author  = {Tassilo Pellegrini},  
 title   = {Detecting Licensing Conflicts with DALICC},
@@ -348,5 +341,43 @@ year   = 2015,
 	
 },
 
+@article{Baran, 
+	author  = {Paul Baran},  
+	title   = {On distributed networks},
+	Url = {https://web.stanford.edu/class/cs244/papers/DistributedCommunicationsNetworks.pdf}, 
+	volume = 51,
+	year   = 1964,
+	
+},
+@article{Masood, 
+	author  = {Faraz Masood},  
+	title   = {An Overview of Distributed Ledger Technology and its Applications},
+	DOI = {10.26438/ijcse/v6i10.422427}, 
+	volume = 7,
+	year   = 2018,
+	
+},
+@article{Szabo, 
+	author  = {Nick Szabo},  
+	title   = {Smart Contracts: Building Blocks for Digital Markets},
+	Url = {http://www.truevaluemetrics.org/DBpdfs/BlockChain/Nick-Szabo-Smart-Contracts-Building-Blocks-for-Digital-Markets-1996-14591.pdf}, 
+	volume = 11,
+	year   = 2018,
+	
+},
+@article{Tim, 
+	author  = {Christian Bizer, Freie Universität Berlin, Germany Tom Heath,Talis Information Ltd, United Kingdom Tim Berners-Lee, Massachusetts Institute of Technology, USA},  
+	title   = {Linked Data - The Story So Far},
+	DOI = {10.4018/jswis.2009081901 · Source: OAI}, 
+	volume = 27,
+	year   = 2009,
+},
 
+@article{Chhetri, 
+author  = {Bijoy Chhetri},  
+title   = {Evolution of World Wide Web},
+url = {https://www.researchgate.net/publication/280944777}, 
+volume = 6,
+year   = 2015,
 
+},
