--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -18,6 +18,7 @@
 \usepackage{changepage}
 \usepackage{enumitem}
 \usepackage{multicol}
+
 \usepackage{mathtools}
 \usepackage[export]{adjustbox}
 \usepackage[square,sort,comma,numbers]{natbib}
@@ -29,10 +30,15 @@
       And Their Integration With Semantic Data Licensing} 
           %note \\[1ex] is a line break in the title
 
-\author{Zahra Jafari}             
-\college{University of Innsbruck}  
-\degree{Master of Informatic}     %the degree
+\author{Zahra Jafari \\
+Supervisor: Priv.-Doz. Dr. Anna Fense} 
+
+\college{Department of Computer Science \\
+Semantic Technology Institute Innsbruck}
+
+\degree{Master's Program\\ Computer Science}     %the degree
 \degreedate{2023}         %the degree date
+
 
 %end the preamble and start the document
 \begin{document}
